<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <ImageView
            style="@style/ms_image_title"
            android:src="@drawable/image_triangle">
        </ImageView>
        <TextView
            style="@style/ms_title"
            android:text="@string/strTitle">
        </TextView>
    </LinearLayout>

    <View
        style="@style/ms_line_goldenrod">
    </View>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/ms_info"
                android:text="@string/strDepartment">
            </TextView>
            <TextView
                style="@style/ms_info"
                android:text="@string/strDepartmentInfo">
            </TextView>
        </TableRow>
        <View
            style="@style/ms_line">
        </View>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/ms_info"
                android:text="@string/strStudent">
            </TextView>
            <TextView
                style="@style/ms_info"
                android:text="@string/strStudentInfo">
            </TextView>
            <ImageView
                style="@style/ms_image"
                android:layout_marginLeft="10dp"
                android:src="@drawable/image_next">
            </ImageView>
        </TableRow>
        <View
            style="@style/ms_line">
        </View>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/ms_info"
                android:text="@string/strLocation">
            </TextView>
            <TextView
                style="@style/ms_info"
                android:text="@string/strLocationInfo">
            </TextView>
        </TableRow>
        <View
            style="@style/ms_line">
        </View>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/ms_info"
                android:text="@string/strPhone">
            </TextView>
            <TextView
                style="@style/ms_info"
                android:text="@string/strPhoneNumber">
            </TextView>
            <ImageView
                style="@style/ms_image"
                android:layout_marginLeft="10dp"
                android:src="@drawable/image_phone_call">
            </ImageView>
        </TableRow>
        <View
            style="@style/ms_line">
        </View>
    </TableLayout>

</LinearLayout>